fix about me section and blur on mobile menu

--- a/src/components/MenuMobile/MenuMobile.module.css
+++ b/src/components/MenuMobile/MenuMobile.module.css
@@ -18,6 +18,7 @@
 
 .menu.open {
 	visibility: visible;
+	backdrop-filter: blur(10px);
 	opacity: 1;
 }
 
